--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -13,7 +13,7 @@
     <h4>
       <div class="pull-right">
         <i class="glyphicon glyphicon-refresh glyph-hover btn-primary btn-header"
-           ng-if="isComplete"
+           ng-if="!noRefresh && isComplete"
            ng-click="refresh(); $event.stopPropagation()"
            uib-tooltip="Click to refresh data"
            tooltip-placement="left"></i>
