--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -141,7 +141,7 @@
             </td>
             <td class="tiny" ng-if="model.getDeleteEnabled()">
               <button class="btn btn-xs btn-danger"
-                      ng-disabled="0 <= isDeleting.indexOf( record.id )"
+                      ng-disabled="isDeleting.includes( record.id )"
                       uib-tooltip="Delete {{ model.module.name.singular }}"
                       tooltip-placement="left"
                       cn-really-message="Are you sure you want to delete the {{ $index + 1 | cnOrdinal }} item in the {{ model.module.name.singular }} list?"
