--- a/web/app/cenozo/chart-bar.tpl.html
+++ b/web/app/cenozo/chart-bar.tpl.html
@@ -1,8 +1,6 @@
-<div class="record-view rounded">
+<div class="record-view rounded" ng-class="{ 'maximize': maximized }">
   <div class="container-fluid bg-primary rounded-top"
-           data-toggle="collapse"
-           data-target="#{{ identifier }}Chart"
-           ng-click="collapsed = !collapsed"
+           ng-click="maximized = !maximized"
            style="cursor:pointer;">
     <h4>
       <div class="pull-right">
@@ -12,8 +10,8 @@
            uib-tooltip="Click to refresh data"
            tooltip-placement="left"></i>
         <i class="glyphicon glyph-hover btn-primary btn-header"
-           ng-class="collapsed ? 'glyphicon-collapse-down' : 'glyphicon-collapse-up'"
-           uib-tooltip="Click to expand chart"
+           ng-class="maximized ? 'glyphicon-resize-small' : 'glyphicon-resize-full'"
+           uib-tooltip="Click to maximize chart"
            tooltip-placement="left"></i>
       </div>
       {{ heading }}
