--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -9,7 +9,7 @@
     </button>
   </div>
   <div class="form-body">
-    <div ng-repeat="group in dataArray" ng-attr-name="{{ group.title }}">
+    <div ng-repeat="group in dataArray" ng-attr-name="{{ group.title }}" ng-if="groupHasVisibleInputs( group )">
       <div ng-if="0 < group.title.length"
            class="container-fluid bg-info"
            style="margin-bottom:2px; cursor:pointer;">
@@ -17,7 +17,7 @@
       </div>
       <cn-add-input
         ng-repeat="input in group.inputArray"
-        ng-if="true != input.exclude && 'add' != input.exclude && 'hidden' != input.type"
+        ng-if="true != input.isExcluded( $state, model ) && 'add' != input.isExcluded( $state, model ) && 'hidden' != input.type"
         record="record"
         formatted-record="formattedRecord"
         model="model"
