--- a/web/app/cenozo/add-input.tpl.html
+++ b/web/app/cenozo/add-input.tpl.html
@@ -20,7 +20,7 @@
           type="text"
           autocomplete="off"
           maxlength="{{ input.maxLength }}"
-          ng-readonly="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+          ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"></input>
         <div ng-switch-when="size">
           <div class="col-sm-8 col-slim">
@@ -31,7 +31,7 @@
               class="form-control"
               type="text"
               autocomplete="off"
-              ng-readonly="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+              ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
               ng-required="model.metadata.columnList[input.key].required"></input>
           </div>
           <div class="col-sm-4 col-slim">
@@ -40,7 +40,7 @@
                     ng-model="formattedRecord[input.key][1]"
                     ng-change="check()"
                     class="form-control"
-                    ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )a"
+                    ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )a"
                     ng-required="model.metadata.columnList[input.key].required">
               <option ng-disabled="null === record[input.key]" value="Bytes">Bytes</option>
               <option ng-disabled="null === record[input.key]" value="KB">KB</option>
@@ -66,7 +66,7 @@
           type="text"
           placeholder="(Type the first few letters to search possible values)"
           autocomplete="off"
-          ng-readonly="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+          ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"></input>
         <input ng-switch-when="lookup-typeahead"
           ng-attr-id="{{ input.key }}"
@@ -82,7 +82,7 @@
           type="text"
           placeholder="(Type the first few letters to search possible values)"
           autocomplete="off"
-          ng-readonly="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+          ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"></input>
         <input ng-switch-when="datetime"
           ng-attr-id="{{ input.key }}"
@@ -95,8 +95,8 @@
           cn-change="check()"
           class="form-control"
           type="text"
-          ng-click="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model ) ? null : selectDatetime()"
-          ng-readonly="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+          ng-click="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model ) ? null : selectDatetime()"
+          ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           onkeydown="return false"></input>
         <input ng-switch-when="color"
           ng-attr-id="{{ input.key }}"
@@ -109,7 +109,7 @@
           colorpicker-size="200"
           colorpicker-close-on-select
           autocomplete="off"
-          ng-readonly="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+          ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"
           onkeydown="return false"></input>
         <select ng-switch-when="select"
@@ -120,7 +120,7 @@
           ng-model="record[input.key]"
           ng-change="check()"
           class="form-control"
-          ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model ) ||
+          ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model ) ||
                        !input.enumList || 1 >= input.enumList.length"
           ng-required="model.metadata.columnList[input.key].required"></select>
         <textarea ng-switch-when="text"
@@ -131,7 +131,7 @@
           cn-change="check()"
           class="form-control"
           maxlength="{{ input.maxLength }}"
-          ng-readonly="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+          ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"></textarea>
         <div ng-switch-when="days" class="row">
           <div class="col-sm-1" style="width: 14.28%">
@@ -140,7 +140,7 @@
                 id="sunday"
                 name="name"
                 ng-model="record.sunday"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> Sunday
             </label>
           </div>
@@ -150,7 +150,7 @@
                 id="monday"
                 name="name"
                 ng-model="record.monday"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> Monday
             </label>
           </div>
@@ -160,7 +160,7 @@
                 id="tuesday"
                 name="name"
                 ng-model="record.tuesday"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> Tuesday
             </label>
           </div>
@@ -170,7 +170,7 @@
                 id="wednesday"
                 name="name"
                 ng-model="record.wednesday"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> Wednesday
             </label>
           </div>
@@ -180,7 +180,7 @@
                 id="thursday"
                 name="name"
                 ng-model="record.thursday"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> Thursday
             </label>
           </div>
@@ -190,7 +190,7 @@
                 id="friday"
                 name="name"
                 ng-model="record.friday"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> Friday
             </label>
           </div>
@@ -200,7 +200,7 @@
                 id="saturday"
                 name="name"
                 ng-model="record.saturday"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> Saturday
             </label>
           </div>
@@ -212,7 +212,7 @@
                 id="january"
                 name="name"
                 ng-model="record.january"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> January
             </label>
           </div>
@@ -222,7 +222,7 @@
                 id="february"
                 name="name"
                 ng-model="record.february"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> February
             </label>
           </div>
@@ -232,7 +232,7 @@
                 id="march"
                 name="name"
                 ng-model="record.march"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> March
             </label>
           </div>
@@ -242,7 +242,7 @@
                 id="april"
                 name="name"
                 ng-model="record.april"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> April
             </label>
           </div>
@@ -252,7 +252,7 @@
                 id="may"
                 name="name"
                 ng-model="record.may"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> May
             </label>
           </div>
@@ -262,7 +262,7 @@
                 id="june"
                 name="name"
                 ng-model="record.june"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> June
             </label>
           </div>
@@ -274,7 +274,7 @@
                 id="july"
                 name="name"
                 ng-model="record.july"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> July
             </label>
           </div>
@@ -284,7 +284,7 @@
                 id="august"
                 name="name"
                 ng-model="record.august"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> August
             </label>
           </div>
@@ -294,7 +294,7 @@
                 id="september"
                 name="name"
                 ng-model="record.september"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> September
             </label>
           </div>
@@ -304,7 +304,7 @@
                 id="october"
                 name="name"
                 ng-model="record.october"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> October
             </label>
           </div>
@@ -314,7 +314,7 @@
                 id="november"
                 name="name"
                 ng-model="record.november"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> November
             </label>
           </div>
@@ -324,7 +324,7 @@
                 id="december"
                 name="name"
                 ng-model="record.december"
-                ng-disabled="true === input.isConstant( $state, model ) || 'add' == input.isConstant( $state, model )"
+                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
                 type="checkbox"> December
             </label>
           </div>
