--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -7,11 +7,11 @@
     <h4>
       <div class="pull-right">
         <i class="glyphicon glyphicon-refresh glyph-hover btn-primary btn-header"
-           ng-if="!model.listModel.isLoading"
+           ng-if="!model.listModel.isLoading && !noRefresh"
            ng-click="refresh(); $event.stopPropagation()"
            uib-tooltip="Click to refresh data"
            tooltip-placement="left"></i>
-        <span class="dropdown report-dropdown" ng-if="model.listModel.enableReports">
+        <span class="dropdown report-dropdown" ng-if="!noReports && model.listModel.enableReports">
           <i class="glyphicon glyphicon-file glyph-hover btn-header"
              ng-class="model.listModel.isReportAllowed && !model.listModel.isReportLoading ?
                'btn-primary' : 'glyph-disabled'"
