--- a/web/app/participant/view.tpl.html
+++ b/web/app/participant/view.tpl.html
@@ -1,27 +1,23 @@
 <cn-record-view model="model"></cn-record-view>
-<div class="vertical-spacer">
+<cn-list-selector model="model"></cn-list-selector>
+<div ng-show="child.subject.snake==model.viewModel.tab" ng-repeat="child in model.module.children">
+  <cn-record-list ng-if="'application' != child.subject.snake &&
+                         model.viewModel[child.subject.camel+'Model']"
+                  model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
+</div>
+<div ng-show="child.subject.snake==model.viewModel.tab" ng-repeat="child in model.module.choosing">
+  <cn-record-list ng-if="'collection' != child.subject.snake &&
+                         model.viewModel[child.subject.camel+'Model']"
+                  model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
+</div>
+<div ng-show="'application'==model.viewModel.tab" class="panel panel-default">
   <cn-record-list ng-if="model.viewModel.applicationModel"
                   model="model.viewModel.applicationModel"
                   remove-columns="version release_based update_queue participant_count site_count">
   </cn-record-list>
 </div>
-<div class="vertical-spacer" ng-repeat="child in model.module.children">
-  <cn-record-list ng-if="'application' != child.subject.snake &&
-                         model.viewModel[child.subject.camel+'Model']"
-                  init-collapsed="'address' != child.subject.snake &&
-                                  'phone' != child.subject.snake &&
-                                  'interview' != child.subject.snake"
-                  model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
-</div>
-<div class="vertical-spacer" ng-repeat="child in model.module.choosing">
-  <cn-record-list ng-if="'collection' != child.subject.snake &&
-                         model.viewModel[child.subject.camel+'Model']"
-                  init-collapsed="true"
-                  model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
-</div>
-<div class="vertical-spacer">
+<div ng-show="'collection'==model.viewModel.tab">
   <cn-record-list ng-if="model.viewModel.collectionModel"
                   model="model.viewModel.collectionModel"
-                  init-collapsed="true"
                   remove-columns="active user_count"></cn-record-list>
 </div>
